# ucloudshell

./: .gitignore  Dockerfile  app.py  config.py  docker-compose.yml  messages.pot  pyproject.toml  run.sh
app/: __init__.py  email.py  extensions.py  models.py  tasks.py
app/api/: __init__.py
app/cloudshell/: __init__.py  api.py  forms.py  helpers.py  routes.py
app/errors/: handlers.py
app/quickcode/: __init__.py  api.py  helpers.py  routes.py
app/templates/: base.html  bootstrap_wtf.html  index.html  shell.html
app/templates/cloudshell/: index.html  shell.html
app/templates/errors/: 404.html  500.html
templates/: index.html  shell.html
