[project]
name = "ucloudshell"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docker>=7.1.0",
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "ruff>=0.8.5",
    "types-docker>=7.1.0.20241229",
    "types-requests>=2.32.0.20241016",
]
