[project]
name = "ucloudshell"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docker>=7.1.0",
    "flask>=3.1.0",
    "flask-migrate>=4.1.0",
    "flask-security[babel,common,fsqla,mfa]>=5.5.2",
    "setuptools>=75.8.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.5",
    "types-docker>=7.1.0.20241229",
    "types-passlib>=1.7.7.20241221",
    "types-requests>=2.32.0.20241016",
    "types-wtforms>=3.2.1.20241221",
]
